k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: mkjs
spec:
  selector:
    app: backend
  ports:
    - port: 8888
      targetPort: 8888
